--- a/package.json
+++ b/package.json
@@ -18,6 +18,14 @@
   },
   "homepage": "https://github.com/davidjsherman/thymio-scratchx#readme",
   "devDependencies": {
+    "@metahub/karma-jasmine-jquery": "^1.0.0",
+    "jasmine-core": "^2.6.4",
+    "jasmine-jquery": "^2.1.1",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-jasmine-ajax": "^0.1.13",
+    "karma-webpack": "^2.0.4",
     "webpack": "^3.4.1"
   }
 }
